--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <title>turndownforwhat.js</title>
 <body>
 drag this link to your browser bookmark bar
-<a href="javascript:(function(){javascript:var s=document.createElement('script');s.setAttribute('src','https://nthitz.github.io/turndownforwhatjs/tdfw.js/tdfw.js');document.body.appendChild(s);})();">
+<a href="javascript:(function(){javascript:var s=document.createElement('script');s.setAttribute('src','https://nthitz.github.io/turndownforwhatjs/tdfw.js');document.body.appendChild(s);})();">
 turndownforwhat
 </a>
 </body>
