--- a/index.html
+++ b/index.html
@@ -1,9 +1,162 @@
+<!DOCTYPE>
 <html>
-<title>turndownforwhat.js</title>
+<head>
+  <style>
+    body {
+      font-family: sans-serif;
+    }
+    #container {
+      padding: 20px;
+      margin: 20px auto;
+      width: 400px;
+      border-radius: 3px;
+      -webkit-border-radius: 3px;
+      -moz-border-radius: 3px;
+      -ms-border-radius: 3px;
+      -o-border-radius: 3px;
+    }
+    #container p{
+      display: block;
+      margin: 0px auto 20px auto;
+      text-align: center;
+    }
+    #bookmarklet {
+      display: block;
+      font-weight: bold;
+      text-tranform: uppercase;
+      color: white;
+      background: #8904C7;
+      text-align: left;
+      -webkit-border-radius: 3px;
+      -moz-border-radius: 3px;
+      -ms-border-radius: 3px;
+      -o-border-radius: 3px;
+      border-radius: 3px;
+      border-bottom: 2px solid #DFA5FA;
+      text-shadow: 0 1px 1px #DFA5FA;
+      font-size: 16px;
+      overflow: hidden;
+      cursor: move;
+      padding: 10px;
+      -webkit-user-select: none;
+      text-decoration: none;
+      text-transform: uppercase;
+      text-align: center;
+    }
+    #bookmarklet:hover {
+      border-bottom: 2px solid #6E4980;
+      text-shadow: 0 1px 1px #6E4980;
+    }
+    #bookmarklet:active {
+      border-bottom: none;
+      border-top: 2px solid #bd460a;
+      text-shadow: 0 1px 1px #a53d09;
+    }
+    .powered {
+      font-size: 10px;
+      color: #ddd;
+      text-align: center;
+    }
+    .powered  a {
+      color: #ddd;
+    }
+    #img {
+        margin-bottom: 50px;
+    }
+    #dfw {
+        -webkit-animation: tdfwIntro 1s ease-in-out 2s infinite;
+        animation: tdfwIntro 1s ease-in-out 2s infinite;
+
+    }
+    .share {
+        margin-top: 50px;
+        text-align: center;
+    }
+    @-webkit-keyframes tdfwIntro { 0% { -webkit-transform: translate(0x,0px); transform: translate(0px,0px); } 10% { -webkit-transform: translate(-4px,1px); transform: translate(-4px,1px); } 20% { -webkit-transform: translate(0px,-4px); transform: translate(0px,-4px); } 30% { -webkit-transform: translate(-3px,0px); transform: translate(-3px,0px); } 40% { -webkit-transform: translate(0px,-2px); transform: translate(0px,-2px); } 50% { -webkit-transform: translate(-4px,-4px); transform: translate(-4px,-4px); } 60% { -webkit-transform: translate(-1px,0px); transform: translate(-1px,0px); } 70% { -webkit-transform: translate(2px,2px); transform: translate(2px,2px); } 80% { -webkit-transform: translate(0px,-1px); transform: translate(0px,-1px); } 90% { -webkit-transform: translate(0px,-3px); transform: translate(0px,-3px); } 100% { -webkit-transform: translate(4px,-2px); transform: translate(4px,-2px); }  } @keyframes tdfwIntro { 0% { -webkit-transform: translate(-1px,-1px); transform: translate(-1px,-1px); } 10% { -webkit-transform: translate(-4px,1px); transform: translate(-4px,1px); } 20% { -webkit-transform: translate(0px,-4px); transform: translate(0px,-4px); } 30% { -webkit-transform: translate(-3px,0px); transform: translate(-3px,0px); } 40% { -webkit-transform: translate(0px,-2px); transform: translate(0px,-2px); } 50% { -webkit-transform: translate(-4px,-4px); transform: translate(-4px,-4px); } 60% { -webkit-transform: translate(-1px,0px); transform: translate(-1px,0px); } 70% { -webkit-transform: translate(2px,2px); transform: translate(2px,2px); } 80% { -webkit-transform: translate(0px,-1px); transform: translate(0px,-1px); } 90% { -webkit-transform: translate(0px,-3px); transform: translate(0px,-3px); } 100% { -webkit-transform: translate(4px,-2px); transform: translate(4px,-2px); }  } 
+  </style>
+</head>
 <body>
-drag this link to your browser bookmark bar
-<a href="javascript:(function(){javascript:var s=document.createElement('script');s.setAttribute('src','https://nthitz.github.io/turndownforwhatjs/tdfw.js');document.body.appendChild(s);})();">
-turndownforwhat
-</a>
+  <div id="container">
+    <div id='img'></div>
+    <p> Drag this button to your bookmarks bar to turn any website <span id="dfw">down for what</span> </p>
+    <a id="bookmarklet" href='javascript:(function()%7Bjavascript:var%20s%3Ddocument.createElement(%27script%27)%3Bs.setAttribute(%27src%27,%27https://nthitz.github.io/turndownforwhatjs/tdfw.js%27)%3Bdocument.body.appendChild(s)%3B%7D)()%3B'>turndownforwhat</a>
+
+    <div class="share">
+        <a class="twitter-share-button" href="https://twitter.com/share?text=Turn%20websites%20down%20for%20what&amp;url=http://nthitz.github.io/turndownforwhatjs/"></a>
+
+        <div class="fb-share-button" data-layout="button_count" data-href="https://nthitz.github.io/turndownforwhatjs/"></div>
+    </div>
+  </div>
+  <p class='powered'> Made by 
+    <a href="https://twitter.com/nthitz">nthitz</a>
+  </p>
+  <script>
+    //HMIeMb7
+    (function() {
+        var lastTime = 0;
+        var vendors = ['ms', 'moz', 'webkit', 'o'];
+        for(var x = 0; x < vendors.length && !window.requestAnimationFrame; ++x) {
+            window.requestAnimationFrame = window[vendors[x]+'RequestAnimationFrame'];
+            window.cancelAnimationFrame = window[vendors[x]+'CancelAnimationFrame'] 
+                                       || window[vendors[x]+'CancelRequestAnimationFrame'];
+        }
+     
+        if (!window.requestAnimationFrame)
+            window.requestAnimationFrame = function(callback, element) {
+                var currTime = new Date().getTime();
+                var timeToCall = Math.max(0, 16 - (currTime - lastTime));
+                var id = window.setTimeout(function() { callback(currTime + timeToCall); }, 
+                  timeToCall);
+                lastTime = currTime + timeToCall;
+                return id;
+            };
+     
+        if (!window.cancelAnimationFrame)
+            window.cancelAnimationFrame = function(id) {
+                clearTimeout(id);
+            };
+    }());
+    var imgs = ['pLrq0jF','jw0Sx4c','VKE4oTV','rGfqb3Y','XDYlwRz'];
+    var imgSrc = imgs[~~ (Math.random() * imgs.length)];
+    imgSrc = 'http://i.imgur.com/' + imgSrc + '.png';
+    var img = document.createElement('img');
+    img.setAttribute('height', 400);
+    img.setAttribute('src', imgSrc); 
+    document.getElementById('img').appendChild(img);
+
+
+
+  </script>
+  <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-55426781-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+
+    <script type="text/javascript">
+    window.twttr=(function(d,s,id){var t,js,fjs=d.getElementsByTagName(s)[0];if(d.getElementById(id)){return}js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);return window.twttr||(t={_e:[],ready:function(f){t._e.push(f)}})}(document,"script","twitter-wjs"));
+    </script>
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId      : '353692794797913',
+          xfbml      : true,
+          version    : 'v2.1'
+        });
+      };
+
+      (function(d, s, id){
+         var js, fjs = d.getElementsByTagName(s)[0];
+         if (d.getElementById(id)) {return;}
+         js = d.createElement(s); js.id = id;
+         js.src = "//connect.facebook.net/en_US/sdk.js";
+         fjs.parentNode.insertBefore(js, fjs);
+       }(document, 'script', 'facebook-jssdk'));
+    </script>
 </body>
 </html>
