updated meta tags

--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
     }
     @-webkit-keyframes tdfwIntro { 0% { -webkit-transform: translate(0x,0px); transform: translate(0px,0px); } 10% { -webkit-transform: translate(-4px,1px); transform: translate(-4px,1px); } 20% { -webkit-transform: translate(0px,-4px); transform: translate(0px,-4px); } 30% { -webkit-transform: translate(-3px,0px); transform: translate(-3px,0px); } 40% { -webkit-transform: translate(0px,-2px); transform: translate(0px,-2px); } 50% { -webkit-transform: translate(-4px,-4px); transform: translate(-4px,-4px); } 60% { -webkit-transform: translate(-1px,0px); transform: translate(-1px,0px); } 70% { -webkit-transform: translate(2px,2px); transform: translate(2px,2px); } 80% { -webkit-transform: translate(0px,-1px); transform: translate(0px,-1px); } 90% { -webkit-transform: translate(0px,-3px); transform: translate(0px,-3px); } 100% { -webkit-transform: translate(4px,-2px); transform: translate(4px,-2px); }  } @keyframes tdfwIntro { 0% { -webkit-transform: translate(-1px,-1px); transform: translate(-1px,-1px); } 10% { -webkit-transform: translate(-4px,1px); transform: translate(-4px,1px); } 20% { -webkit-transform: translate(0px,-4px); transform: translate(0px,-4px); } 30% { -webkit-transform: translate(-3px,0px); transform: translate(-3px,0px); } 40% { -webkit-transform: translate(0px,-2px); transform: translate(0px,-2px); } 50% { -webkit-transform: translate(-4px,-4px); transform: translate(-4px,-4px); } 60% { -webkit-transform: translate(-1px,0px); transform: translate(-1px,0px); } 70% { -webkit-transform: translate(2px,2px); transform: translate(2px,2px); } 80% { -webkit-transform: translate(0px,-1px); transform: translate(0px,-1px); } 90% { -webkit-transform: translate(0px,-3px); transform: translate(0px,-3px); } 100% { -webkit-transform: translate(4px,-2px); transform: translate(4px,-2px); }  } 
   </style>
+
+  <title>Turndownforwhat.JS</div>
+  <meta property="og:title" content="Turndownforwhat.JS" />
+  <meta property="og:url" content="https://nthitz.github.io/turndownforwhatjs/"/>
+  <meta property="og:image" content="http://i.imgur.com/pLrq0jF.png" />
+
 </head>
 <body>
   <div id="container">
