--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <meta property="og:title" content="Turndownforwhat.JS" />
   <meta property="og:url" content="https://nthitz.github.io/turndownforwhatjs/"/>
   <meta property="og:image" content="http://i.imgur.com/pLrq0jF.png" />
-
+  <meta property="og:type" content="website" />
 </head>
 <body>
   <div id="container">
