--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
   <meta property="og:url" content="https://nthitz.github.io/turndownforwhatjs/"/>
   <meta property="og:image" content="http://i.imgur.com/pLrq0jF.png" />
   <meta property="og:type" content="website" />
+  <meta property="og:description" content="Turn webpages Down For What with the click of a button. Turndownforwhat.js makes any website a party." />
+  <meta property="description" content="Turn webpages Down For What with the click of a button. Turndownforwhat.js makes any website a party." />
+
+  <meta name="keywords" content="turn down for what, turndownforwhat, turndownforwhat.js, tdfw, tdfw.js, turn down for what javascript, bookmarklet, tdfw bookmarklet, turn down for what bookmarklet"
+
 </head>
 <body>
   <div id="container">
