--- a/index.html
+++ b/index.html
@@ -77,28 +77,28 @@
 
   <title>Turndownforwhat.JS</title>
   <meta property="og:title" content="Turndownforwhat.JS" />
-  <meta property="og:url" content="https://nthitz.github.io/turndownforwhatjs/"/>
+  <meta property="og:url" content="https://raveniscool27.github.io/turndownforwhatjs/"/>
   <meta property="og:image" content="http://i.imgur.com/pLrq0jF.png" />
   <meta property="og:type" content="website" />
-  <meta property="og:description" content="Turn webpages Down For What with the click of a button. Turndownforwhat.js makes any website a party." />
-  <meta property="description" content="Turn webpages Down For What with the click of a button. Turndownforwhat.js makes any website a party." />
+  <meta property="og:description" content="Turn webpages into a funeral with the click of a button. CDance.js makes any website a party." />
+  <meta property="description" content="Turn webpages Down For What with the click of a button. Cdance.js makes any website a party." />
 
-  <meta name="keywords" content="turn down for what, turndownforwhat, turndownforwhat.js, tdfw, tdfw.js, turn down for what javascript, bookmarklet, tdfw bookmarklet, turn down for what bookmarklet"
+  <meta name="keywords" content="Coffin Dance, CoffinDance, turndownforwhat.js, CD, CDance.js, CDance javascript, bookmarklet, CD bookmarklet, Coffin Dance bookmarklet"
 
 </head>
 <body>
   <div id="container">
     <div id='img'></div>
-    <p> Drag this button to your bookmarks bar to turn any website <span id="dfw">down for what</span> </p>
-    <a id="bookmarklet" href='javascript:(function()%7Bjavascript:var%20s%3Ddocument.createElement(%27script%27)%3Bs.setAttribute(%27src%27,%27https://nthitz.github.io/turndownforwhatjs/tdfw.js%27)%3Bdocument.body.appendChild(s)%3B%7D)()%3B'>turndownforwhat</a>
+    <p> Drag this button to your bookmarks bar to turn any website <span id="dfw">into a funeral</span> </p>
+    <a id="bookmarklet" href='javascript:(function()%7Bjavascript:var%20s%3Ddocument.createElement(%27script%27)%3Bs.setAttribute(%27src%27,%27https://raveniscool27.github.io/turndownforwhatjs/CDance.js%27)%3Bdocument.body.appendChild(s)%3B%7D)()%3B'>turndownforwhat</a>
 
     <div class="share">
-        <a class="twitter-share-button" href="https://twitter.com/share?text=Turn%20websites%20down%20for%20what&amp;url=http://nthitz.github.io/turndownforwhatjs/"></a>
+        <a class="twitter-share-button" href="https://twitter.com/share?text=Turn%20websites%20down%20for%20what&amp;url=http://raveniscool27.github.io/turndownforwhatjs/"></a>
 
-        <div class="fb-share-button" data-layout="button_count" data-href="https://nthitz.github.io/turndownforwhatjs/"></div>
+        <div class="fb-share-button" data-layout="button_count" data-href="https://raveniscool27.github.io/turndownforwhatjs/"></div>
     </div>
   </div>
-  <p class='powered'> Made by 
+  <p class='powered'> Original Made by 
     <a href="https://twitter.com/nthitz">nthitz</a>
   </p>
   <script>
