--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   </style>
 
   <title>Turndownforwhat.JS</title>
-  <meta property="og:title" content="Turndownforwhat.JS" />
+  <meta property="og:title" content="CDance.JS" />
   <meta property="og:url" content="https://raveniscool27.github.io/turndownforwhatjs/"/>
   <meta property="og:image" content="http://i.imgur.com/pLrq0jF.png" />
   <meta property="og:type" content="website" />
