--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
     @-webkit-keyframes tdfwIntro { 0% { -webkit-transform: translate(0x,0px); transform: translate(0px,0px); } 10% { -webkit-transform: translate(-4px,1px); transform: translate(-4px,1px); } 20% { -webkit-transform: translate(0px,-4px); transform: translate(0px,-4px); } 30% { -webkit-transform: translate(-3px,0px); transform: translate(-3px,0px); } 40% { -webkit-transform: translate(0px,-2px); transform: translate(0px,-2px); } 50% { -webkit-transform: translate(-4px,-4px); transform: translate(-4px,-4px); } 60% { -webkit-transform: translate(-1px,0px); transform: translate(-1px,0px); } 70% { -webkit-transform: translate(2px,2px); transform: translate(2px,2px); } 80% { -webkit-transform: translate(0px,-1px); transform: translate(0px,-1px); } 90% { -webkit-transform: translate(0px,-3px); transform: translate(0px,-3px); } 100% { -webkit-transform: translate(4px,-2px); transform: translate(4px,-2px); }  } @keyframes tdfwIntro { 0% { -webkit-transform: translate(-1px,-1px); transform: translate(-1px,-1px); } 10% { -webkit-transform: translate(-4px,1px); transform: translate(-4px,1px); } 20% { -webkit-transform: translate(0px,-4px); transform: translate(0px,-4px); } 30% { -webkit-transform: translate(-3px,0px); transform: translate(-3px,0px); } 40% { -webkit-transform: translate(0px,-2px); transform: translate(0px,-2px); } 50% { -webkit-transform: translate(-4px,-4px); transform: translate(-4px,-4px); } 60% { -webkit-transform: translate(-1px,0px); transform: translate(-1px,0px); } 70% { -webkit-transform: translate(2px,2px); transform: translate(2px,2px); } 80% { -webkit-transform: translate(0px,-1px); transform: translate(0px,-1px); } 90% { -webkit-transform: translate(0px,-3px); transform: translate(0px,-3px); } 100% { -webkit-transform: translate(4px,-2px); transform: translate(4px,-2px); }  } 
   </style>
 
-  <title>Turndownforwhat.JS</title>
+  <title>CDance.JS</title>
   <meta property="og:title" content="CDance.JS" />
   <meta property="og:url" content="https://raveniscool27.github.io/turndownforwhatjs/"/>
-  <meta property="og:image" content="http://i.imgur.com/pLrq0jF.png" />
+  <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/en/8/8a/Dancing_Pallbearers.jpg" />
   <meta property="og:type" content="website" />
   <meta property="og:description" content="Turn webpages into a funeral with the click of a button. CDance.js makes any website a party." />
   <meta property="description" content="Turn webpages Down For What with the click of a button. Cdance.js makes any website a party." />
