--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <div id="container">
     <div id='img'></div>
     <p> Drag this button to your bookmarks bar to turn any website <span id="dfw">into a funeral</span> </p>
-    <a id="bookmarklet" href='javascript:(function()%7Bjavascript:var%20s%3Ddocument.createElement(%27script%27)%3Bs.setAttribute(%27src%27,%27https://raveniscool27.github.io/turndownforwhatjs/CDance.js%27)%3Bdocument.body.appendChild(s)%3B%7D)()%3B'>turndownforwhat</a>
+    <a id="bookmarklet" href='javascript:(function()%7Bjavascript:var%20s%3Ddocument.createElement(%27script%27)%3Bs.setAttribute(%27src%27,%27https://raveniscool27.github.io/turndownforwhatjs/CDance.js%27)%3Bdocument.body.appendChild(s)%3B%7D)()%3B'>Killin It</a>
 
     <div class="share">
         <a class="twitter-share-button" href="https://twitter.com/share?text=Turn%20websites%20down%20for%20what&amp;url=http://raveniscool27.github.io/turndownforwhatjs/"></a>
