--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/en/8/8a/Dancing_Pallbearers.jpg" />
   <meta property="og:type" content="website" />
   <meta property="og:description" content="Turn webpages into a funeral with the click of a button. CDance.js makes any website a party." />
-  <meta property="description" content="Turn webpages Down For What with the click of a button. Cdance.js makes any website a party." />
+  <meta property="description" content="Turn webpages into a funeral with the click of a button. Cdance.js makes any website a party." />
 
   <meta name="keywords" content="Coffin Dance, CoffinDance, turndownforwhat.js, CD, CDance.js, CDance javascript, bookmarklet, CD bookmarklet, Coffin Dance bookmarklet"
 
@@ -93,7 +93,7 @@
     <a id="bookmarklet" href='javascript:(function()%7Bjavascript:var%20s%3Ddocument.createElement(%27script%27)%3Bs.setAttribute(%27src%27,%27https://raveniscool27.github.io/turndownforwhatjs/CDance.js%27)%3Bdocument.body.appendChild(s)%3B%7D)()%3B'>Killin It</a>
 
     <div class="share">
-        <a class="twitter-share-button" href="https://twitter.com/share?text=Turn%20websites%20down%20for%20what&amp;url=http://raveniscool27.github.io/turndownforwhatjs/"></a>
+        <a class="twitter-share-button" href="https://twitter.com/share?text=Turn%20websites%20into%20a%20funeral&amp;url=http://raveniscool27.github.io/turndownforwhatjs/"></a>
 
         <div class="fb-share-button" data-layout="button_count" data-href="https://raveniscool27.github.io/turndownforwhatjs/"></div>
     </div>
@@ -127,7 +127,7 @@
                 clearTimeout(id);
             };
     }());
-    var imgs = ['pLrq0jF','jw0Sx4c','VKE4oTV','rGfqb3Y','XDYlwRz'];
+    var imgs = ['6Gb8DcW','L1kLdmA'];
     var imgSrc = imgs[~~ (Math.random() * imgs.length)];
     imgSrc = 'http://i.imgur.com/' + imgSrc + '.png';
     var img = document.createElement('img');
